Fix invisible text

--- a/assets/css/box-model.css
+++ b/assets/css/box-model.css
@@ -82,13 +82,15 @@ span {
 } */
 
 .board {
-  width: 620px;
-  height: 620px;
+  width: 610px;
+  height: 610px;
   border: 5px solid red;
+  font-size: 0;
 }
 
 .block {
   display: inline-block;
+  font-size: 16px;
   width: 200px;
   height: 200px;
   padding: 100px;
